--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,9 @@
 
   color-scheme: light dark;
   color: rgb(255, 255, 255);
-  background-color: #242424;
+
+  --background-color: #242424;
+  background-color: var(--background-color);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
