--- a/src/components/CustomerReviews.css
+++ b/src/components/CustomerReviews.css
@@ -14,7 +14,7 @@
     --grid-padding-inline: 2rem;
 
     --grid-col-size-calc: calc(
-        (100% - var(--grid-gap) * (var(--grid-max-col-count) - 1) /* + var(--grid-padding-inline) */) /
+        (100% - var(--grid-gap) * (var(--grid-max-col-count) - 1)) /
         var(--grid-max-col-count)
     );
 
@@ -98,7 +98,6 @@
 .glowing-border::after {
     z-index: -2;
     inset: -0.5rem;
-    /* inset: 0; */
     background: linear-gradient(45deg, #ff6f91, #8d2f45) border-box;
     filter: blur(var(--glow-size, 1rem));
     opacity: var(--glow-intensity, 0.125);
