--- a/src/components/UspList.css
+++ b/src/components/UspList.css
@@ -18,11 +18,10 @@
 }
 
 .usp-item-headline {
-    font-size: 3.5rem;
+    font-size: 2.375rem;
+    letter-spacing: 2px;
     margin-block: 0;
-    font-family: 'Caveat', cursive;
-    font-weight: 500;
-    font-style: italic;
+    font-family: 'Permanent Marker', cursive;
 }
 
 .usp-item-content {
