--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,9 @@
   color-scheme: light dark;
   color: rgb(255, 255, 255);
 
-  --background-color: #242424;
-  background-color: var(--background-color);
+  /* --background-color: #242424; */
+  /* background-color: var(--background-color); */
+  background: radial-gradient(circle,rgba(81, 32, 89, 1) 7%, rgba(92, 41, 62, 1) 53%, rgba(145, 48, 129, 1) 100%);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
