--- a/src/components/LipstickLine.css
+++ b/src/components/LipstickLine.css
@@ -1,6 +1,3 @@
-.lipstick-line {
-    position: absolute;
-    inset: 0;
-    z-index: -1;
-    background: url("/assets/lipstick-line.webp") center/contain no-repeat;
-} 
+#lipstick-line {
+    width: 100%;
+}
