--- a/src/components/LipstickLine.css
+++ b/src/components/LipstickLine.css
@@ -1,3 +1,13 @@
+.lipstick-line-wrapper {
+    position: fixed;
+    inset: 0;
+    transition: opacity 240ms ease;
+}
+
+.lipstick-line-wrapper.hidden {
+    opacity: 0;
+}
+
 #lipstick-line {
     width: 100%;
 }
