--- a/src/components/StageText.css
+++ b/src/components/StageText.css
@@ -3,18 +3,29 @@
     display: grid;
     grid-template-columns: 43% 57%;
     place-items: center;
-    inset: 0px;
+    top: 0;
+    inset-inline: 0;
+    height: calc(100vh - 90px);
+    z-index: 5;
 }
 
 .stage-content {
-    grid-column: 2;
+    grid-column: 1 / span 2;
     overflow-wrap: break-word;
     hyphens: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+}
+
+.stage-content {
+    grid-row: 1;
 }
 
 .stage-headline {
     font-family: 'Permanent Marker', cursive;
-    font-size: clamp(2.8rem, 12vw, 5.8rem);
+    font-size: clamp(2.9rem, 14vw, 5.8rem);
     line-height: 1.2;
     margin-block: 0.4em;
     text-shadow: 0 4px 16px rgba(0,0,0,0.15);
@@ -26,4 +37,11 @@
     margin-block: 1.5rem;
     font-size: larger;
     color: var(--primary-text-color-toned-down);
+}
+
+@media (min-width: 768px) {
+    .stage-content {
+        grid-column: 2;
+        justify-content: start;
+    }
 }
