--- a/src/components/Usp.css
+++ b/src/components/Usp.css
@@ -1,13 +1,10 @@
 .usp-item {
     box-sizing: border-box;
-    width: min(100%, 24ch);
-    padding: 1rem;
-    margin: 1.4rem;
-    grid-column: 2;
+    width: min(60%, 24ch);
 }
 
 .usp-item-headline {
-    font-size: 2.375rem;
+    font-size: 2.25rem;
     letter-spacing: 2px;
     margin-block: 0;
     font-family: 'Permanent Marker', cursive;
@@ -21,10 +18,14 @@
 
 @media (min-width: 768px) {
     .usp-item {
-        grid-column: 1 / span 2;
+        width: 36ch;
     }
 
-    .usp-item:nth-child(even) {
-        justify-self: end;
+    .usp-item:nth-child(odd) {
+        align-self: flex-start;
+    }
+
+    .usp-item-headline {
+        font-size: 2.375rem;
     }
 }
