--- a/src/components/UspList.css
+++ b/src/components/UspList.css
@@ -1,10 +1,11 @@
 .usp-list-wrapper {
     position:  relative;
     inset: 0;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-    align-items: start;
+    display: flex;
+    flex-direction: column;
+    row-gap: 100px;
+    justify-content: space-around;
+    align-items: flex-end;
     overflow: hidden;
     z-index: 3;
 }
