--- a/src/components/StageText.css
+++ b/src/components/StageText.css
@@ -8,7 +8,9 @@
 .stage-content {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     max-width: 100%;
+    height: 90%;
 }
 
 .stage-headline {
@@ -31,5 +33,6 @@
 @media (min-width: 768px) {
     .stage-content {
         max-width: 60%;
+        height: auto;
     }    
 }
