--- a/src/components/LipstickModel.css
+++ b/src/components/LipstickModel.css
@@ -1,5 +1,5 @@
 .lipstick-animation-wrapper {
-    position: relative;
+    position: absolute;
     height: 300vh;
     width: 100%;
     z-index: 6;
