--- a/src/components/StageText.css
+++ b/src/components/StageText.css
@@ -1,8 +1,11 @@
 .stage-wrapper {
+    position: sticky;
+    top: 0;
+    z-index: 3;
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    height: 100dvh;
+    height: 80dvh;
 }
 
 .stage-content {
