--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,8 +1,8 @@
 .header-wrapper {
     position: sticky;
     top: 0;
-    left: 0;
-    right: 0;
+    inset-inline: 0;
+    width: 100%;
     z-index: 10;
     backdrop-filter: blur(5px);
 }
