--- a/src/components/UspList/UspList.css
+++ b/src/components/UspList/UspList.css
@@ -1,17 +1,16 @@
 .usp-wrapper {
     position: fixed;
     inset: 0;
-    width: 100%;
-    height: 100dvh;
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    flex: 1;
 }
 
 .usp-item {
     box-sizing: border-box;
     width: min(60%, 24ch);
+    margin: 1.2rem;
+    padding: 1.2rem;
 }
 
 .usp-item-headline {
